--- a/oppia/locale/en/LC_MESSAGES/django.po
+++ b/oppia/locale/en/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: 0.4.4\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-08-25 17:35+0000\n"
-"PO-Revision-Date: 2021-05-06 13:36+0300\n"
+"PO-Revision-Date: 2021-05-20 07:51+0200\n"
 "Last-Translator: Alex Little <alex@alexlittle.net>\n"
 "Language: en_GB\n"
 "MIME-Version: 1.0\n"
@@ -1140,7 +1140,7 @@ msgstr ""
 #: templates/profile/export/points.html:6
 #: templates/profile/export/quiz_attempts.html:6
 msgid "app_name"
-msgstr "MOHS Health Worker Training"
+msgstr "MOHS Digital Classroom"
 
 #: templates/base.html:42
 msgid "Cron tasks have not been run for over 7 days"
